--- a/2.proyecto_team_apartados.ipynb
+++ b/2.proyecto_team_apartados.ipynb
@@ -38,34 +38,24 @@
     "df = pd.read_csv(\"avocado.csv\")\n",
     "df_cp = df.copy()\n",
     "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
+    "\n",
+    "\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Para seleccionar unicamente las regiones propias , descartamos Total US para la vista gráfica\n",
     "df_cp_cleaned=df_cp[df_cp.region != 'TotalUS']\n",
     "df_cp_CA=df_cp[df_cp.region == 'California']\n",
     "df_cp_noCA=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\")]\n",
     "df_cp_noCA_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\") & (df_cp.type=='conventional')]\n",
     "df_cp_noCA_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.region != \"California\") & (df_cp.type=='organic')]\n",
-    "df_cp_cleaned_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='organic')]\n",
-    "df_cp_cleaned_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='conventional')]\n",
-    "df_cp_W=df_cp[df_cp.region == 'West']\n",
-    "df_cp_W_conventional=df_cp[(df_cp.region == 'West')&(df_cp.type=='conventional')]\n",
-    "df_cp_W_organic=df_cp[(df_cp.region == 'West')&(df_cp.type=='organic')]\n",
-    "df_cp_CA_conventional=df_cp[(df_cp.region == 'California')&(df_cp.type=='conventional')]\n",
-    "df_cp_CA_organic=df_cp[(df_cp.region == 'California')&(df_cp.type=='organic')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ff55f47-b51f-4e69-9694-221fd9a2b492",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20,200))\n",
-    "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Gráfico de Violín Total Volume en cada Region\",{'fontsize':20})"
+    "df_cp_organic=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='organic')]\n",
+    "df_cp_conventional=df_cp[(df_cp.region != 'TotalUS') & (df_cp.type=='conventional')]\n",
+    "df_cp_Denver=df_cp[df_cp.region == 'Denver']\n",
+    "GreatRegions=['West',\n"
    ]
   },
   {
@@ -75,12 +65,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20,200))\n",
+    "plt.figure(figsize=(20,30))\n",
     "sns.set_style('whitegrid')\n",
     "sns.violinplot(x='Total Volume',y='region', data=df_cp_cleaned)\n",
     "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
     "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Gráfico de Violín Total Volume en cada Region excepto TotalUS\",{'fontsize':20})"
+    "plt.title(\"Total Volume en cada Region excepto TotalUS\",{'fontsize':20})\n"
    ]
   },
   {
@@ -95,7 +85,7 @@
     "sns.violinplot(x='Total Volume',y='region',hue='type', data=df_cp_cleaned,palette=\"ch:r=-.5,l=.75\")\n",
     "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
     "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Gráfico de Violín de Total Volume en cada región excepto TotalUS segun type\",{'fontsize':15})"
+    "plt.title(\"Total Volume en cada región excepto TotalUS segun type\",{'fontsize':15})"
    ]
   },
   {
@@ -129,66 +119,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ab595f6-7da7-434c-94b7-10c3660b7428",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_W_conventional)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en West tipo convencional\",{'fontsize':15})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca866280-f9ad-4f63-b829-cb9ca9dcf43f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_W_organic)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en West tipo organic\",{'fontsize':20})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d73586c6-03c4-4b82-8f28-e57420f23e7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_CA_conventional)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en California tipo convencional\",{'fontsize':15})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b7af86b-5762-4b7f-b42a-de1f2ebdfae5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "sns.set_style('whitegrid')\n",
-    "sns.violinplot(x='Total Volume',y='region', data=df_cp_CA_organic)\n",
-    "plt.xlabel('Total Volume',{'fontsize' : 'large'})\n",
-    "plt.ylabel('Region',{'fontsize':'large'})\n",
-    "plt.title(\"Total Volume en California tipo organic\",{'fontsize':15})"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a8b096ac",
    "metadata": {},
@@ -212,158 +142,44 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "#from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "df = pd.read_csv(\"avocado.csv\")\n",
     "df_cp = df.copy()\n",
     "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
     "\n",
-    "# Configurar el tamaño de la figura\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Crear boxplot para comparar la distribución de precios promedio entre años\n",
-    "sns.boxplot(data=df_cp, x='year', y='AveragePrice')#,hue='year', palette='Pastel1')\n",
-    "\n",
-    "# Añadir título y etiquetas a los ejes\n",
-    "plt.title('AveragePrice por Año')\n",
-    "plt.xlabel('Año')\n",
-    "plt.ylabel('Average Price')\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()"
+    "plt.figure(figsize=(50,40))\n",
+    "sns.boxplot(df_cp_cleaned, x=\"year\", y=\"AveragePrice\", hue='type', fill=False, gap=1)\n",
+    "plt.xlabel('Año',{'fontsize' : 30})\n",
+    "plt.ylabel('Region',{'fontsize':'large'})\n",
+    "plt.title(\"Average Price por año y region\",{'fontsize':40})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c0b0d8-6c6b-45c9-aced-1a67ddb65926",
+   "id": "1775f24a-fd10-4f90-8b25-28cc439b5e7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
-    "\n",
-    "# Configurar el tamaño de la figura\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Crear boxplot para comparar la distribución de precios promedio entre años\n",
-    "sns.boxplot(data=df_cp_cleaned, x='year', y='AveragePrice', hue='year', palette='Pastel1')\n",
-    "\n",
-    "# Añadir título y etiquetas a los ejes\n",
-    "plt.title('AveragePrice sin Total US por Año')\n",
-    "plt.xlabel('Año')\n",
-    "plt.ylabel('Average Price')\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()"
+    "plt.figure(figsize=(50,40))\n",
+    "sns.boxplot(df_cp_conventional, x=\"year\", y=\"AveragePrice\", fill=False, gap=1)\n",
+    "plt.xlabel('Año',{'fontsize' : 'large'})\n",
+    "plt.ylabel('Region',{'fontsize':'large'})\n",
+    "plt.title(\"Average Price Convencional por año y region\",{'fontsize':20})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa7c1710-6ca3-491d-9d9f-5138689c7c2b",
+   "id": "fe8f0fff-ee7b-4ee5-a304-212b68dc0301",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
-    "\n",
-    "# Configurar el tamaño de la figura\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Crear boxplot para comparar la distribución de precios promedio entre años\n",
-    "sns.boxplot(data=df_cp_W, x='year', y='AveragePrice', hue='year', palette='Pastel1')\n",
-    "\n",
-    "# Añadir título y etiquetas a los ejes\n",
-    "plt.title('AveragePrice región West por Año')\n",
-    "plt.xlabel('Año')\n",
-    "plt.ylabel('Average Price')\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67a26e54-3dd4-40fc-8c3d-c23406b290ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
-    "\n",
-    "# Configurar el tamaño de la figura\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Crear boxplot para comparar la distribución de precios promedio entre años\n",
-    "sns.boxplot(data=df_cp_W_conventional, x='year', y='AveragePrice', hue='year', palette='Pastel1')\n",
-    "\n",
-    "# Añadir título y etiquetas a los ejes\n",
-    "plt.title('AveragePrice región West tipo convencional por Año')\n",
-    "plt.xlabel('Año')\n",
-    "plt.ylabel('Average Price')\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56988109-1bbf-415e-88ee-7216466701a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
-    "\n",
-    "# Configurar el tamaño de la figura\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "\n",
-    "# Crear boxplot para comparar la distribución de precios promedio entre años\n",
-    "sns.boxplot(data=df_cp_W_organic, x='year', y='AveragePrice', hue='year', palette='Pastel1')\n",
-    "\n",
-    "# Añadir título y etiquetas a los ejes\n",
-    "plt.title('AveragePrice región West tipo organico por Año')\n",
-    "plt.xlabel('Año')\n",
-    "plt.ylabel('Average Price')\n",
-    "\n",
-    "# Mostrar el gráfico\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "331793dc-05dc-4f9f-bf7b-0b142c3fcfda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.boxplot(y=\"Type\", x=\"AveragePrice\", data=data, palette = 'pink')"
+    "plt.figure(figsize=(50,40))\n",
+    "sns.boxplot(df_cp_organic, x=\"year\", y=\"AveragePrice\", hue=\"region\", fill=False, gap=1)\n",
+    "plt.xlabel('Año',{'fontsize' : 'large'})\n",
+    "plt.ylabel('Region',{'fontsize':'large'})\n",
+    "plt.title(\"Average Price Organico por año y region\",{'fontsize':20})"
    ]
   },
   {
@@ -521,40 +337,13 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "#from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "\n",
-    "#y=df_cp_cleaned.groupby(['year'])['AveragePrice'].mean()\n",
-    "y=df_cp_cleaned_organic.groupby(['year'])['AveragePrice'].mean()\n",
-    "x=(df_cp_cleaned_organic['year'].unique())\n",
-    "\n",
-    "plt.title('Evolución de precios promedio')\n",
-    "plt.xlabel('Average Price')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.plot(x, y)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17bc9c5b-cc74-4133-8fc5-974cc2cc7ec9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "#from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "df = pd.read_csv(\"avocado.csv\")\n",
     "df_cp = df.copy()\n",
     "df_cp['Date'] = pd.to_datetime(df_cp['Date'])\n",
-    "#y=df_cp_cleaned.groupby(['year'])['AveragePrice'].mean()\n",
-    "y=df_cp_cleaned_organic.groupby(['year'])['AveragePrice'].mean()\n",
-    "x=(df_cp_cleaned_organic['year'].unique())\n",
     "\n",
-    "plt.title('Evolución de precios promedio')\n",
-    "plt.xlabel('Average Price')\n",
-    "plt.ylabel('Frequency')\n",
+    "y=df_cp.groupby(['year'])['AveragePrice'].mean()\n",
+    "x=(df_cp['year'].unique())\n",
+    "\n",
     "plt.plot(x, y)\n",
     "plt.show()"
    ]
@@ -570,7 +359,7 @@
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.histplot(average_prices, bins=100, kde=True, color='skyblue')\n",
-    "plt.title('Histograma de AveragePrice incluyendo TotalUS')\n",
+    "plt.title('Histogram of Average Avocado Prices')\n",
     "plt.xlabel('Average Price')\n",
     "plt.ylabel('Frequency')\n",
     "plt.show()"
@@ -594,7 +383,7 @@
     ")\n",
     "\n",
     "# Add titles and labels\n",
-    "plt.title(\"Histograma de AveragePrice según el tipo ( excluído Total US)\")\n",
+    "plt.title(\"Histogram of Average Avocado Prices by Type\")\n",
     "plt.xlabel(\"Average Price\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.legend(loc='upper right')\n"
