--- a/0_data_set_Xavi.ipynb
+++ b/0_data_set_Xavi.ipynb
@@ -1403,6 +1403,22 @@
     "df_temp = convencional_region_mean_total[convencional_region_mean_total['Market size'] < 1*10**6]\n",
     "df_temp = convencional_region_mean_total[convencional_region_mean_total['Market size'] < 1*10**6]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd978ecf-4f3a-4793-b3de-13d117cdb0eb",
+   "metadata": {},
+   "source": [
+    "# Exemple subplots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "400addac-381a-47d4-bd81-627dd0f2756e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
