--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -55,6 +55,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "import matplotlib.patches as mpatches\n",
     "import avocado_manager as av\n",
     "av.init()\n",
     "df_cp = av.df(\"df_cp\")\n",
@@ -157,7 +158,7 @@
    "id": "513e5171",
    "metadata": {},
    "source": [
-    "##### Realiza un análisis exploratorio para entender la estructura del conjunto, incluyendo el número de filas y columnas, tipos de datos y valores faltantes. \n",
+    "##### Análisis exploratorio para entender la estructura del conjunto, incluyendo el número de filas y columnas, tipos de datos y valores faltantes. \n",
     "\n",
     "* Imprime la cantidad de valores faltantes por columna utilizando isnull()."
    ]
@@ -447,6 +448,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00837afa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "4916df1d",
    "metadata": {},
@@ -526,7 +535,8 @@
    "source": [
     "##### Comparación precios promedio convencional y organico\n",
     "Observaciones:\n",
-    "* TODO: Aqui veiem que existeixen unes regions mes relevants que altres. Caldria fer una separació?"
+    "* TODO: Aqui veiem que existeixen unes regions mes relevants que altres. Caldria fer una separació?\n",
+    "* TODO: Excloure TotalUS ??"
    ]
   },
   {
@@ -569,7 +579,7 @@
    "metadata": {},
    "source": [
     "Observaciones:\n",
-    "* Aquest gràfic es espectacular, y ens permet veure que sempre són els alvocats orgànics els que costen més que la mitjana."
+    "* TODO: Aquest gràfic es espectacular, y ens permet veure que sempre són els alvocats orgànics els que costen més que la mitjana."
    ]
   },
   {
@@ -632,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf6afdc",
+   "id": "23afbab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,8 +654,8 @@
     "\n",
     "# Graficar\n",
     "plt.figure(figsize=(12,3))\n",
-    "plt.plot(df_grouped_conventional, label='Volumen total ventas (conventional)')\n",
     "plt.title('Volumen total de ventas a lo targo del tiempo')\n",
+    "plt.plot(df_grouped_conventional, label='Volumen total ventas (conventional)')\n",
     "plt.xlabel('Fecha')\n",
     "plt.ylabel('Volumen ventas')\n",
     "plt.legend(loc='best'); plt.grid(True)\n",
@@ -656,8 +666,8 @@
     "plt.show()\n",
     "\n",
     "plt.figure(figsize=(12,3))\n",
-    "plt.plot(df_grouped_conventional, label='Volumen total ventas (conventional) escala logaritmica')\n",
     "plt.title('Volumen total de ventas a lo targo del tiempo - escala logaritmica')\n",
+    "plt.plot(df_grouped_conventional, label='Volumen total ventas (conventional) escala logaritmica')\n",
     "plt.xlabel('Fecha')\n",
     "plt.ylabel('Volumen ventas')\n",
     "plt.yscale('log')\n",
@@ -1117,9 +1127,7 @@
    "outputs": [],
    "source": [
     "df_corr_gen= df_cp.copy()\n",
-    "\n",
     "df_corr_gen = df_corr_gen[df_corr_gen['region']=='Philadelphia']\n",
-    "\n",
     "# df_corr_gen = df_corr_gen[(df_corr_gen['region_class']== 'City') | (df_corr_gen['region_class']== 'Region')]\n",
     "\n",
     "corr_df= df_corr_gen[['AveragePrice', 'Total Volume', 'Total Bags' ,'Volume_Hass_S', 'Volume_Hass_L', 'Volume_Hass_XL']]\n",
@@ -1129,7 +1137,7 @@
     "# Visualizar la matriz de correlación\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
-    "plt.title('Matriz de Correlación')\n",
+    "plt.title('Matriz de Correlación (Philadelphia)')\n",
     "plt.show()\n",
     "\n",
     "# Identificar columnas con correlación alta (umbral = 0.8)\n",
@@ -1139,7 +1147,7 @@
     "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
     "        to_drop.append(column)\n",
     "        \n",
-    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")\n"
+    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
    ]
   },
   {
@@ -1162,6 +1170,14 @@
     "df_local= df_local[df_local['region']=='TotalUS']\n",
     "df_local = df_local[df_local['AveragePrice']==1.0]\n",
     "display(df_local)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "919421ac",
+   "metadata": {},
+   "source": [
+    "* TODO ?"
    ]
   },
   {
