Proporcion por tipo de bolsa

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -321,6 +321,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fdf19125",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bc9fbef",
+   "metadata": {},
+   "source": [
+    "##### Proporcion por tipo de bolsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "746e0369",
    "metadata": {},
    "outputs": [],
