--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -460,23 +460,8 @@
    "id": "02eca268",
    "metadata": {},
    "source": [
-    "##### Separar avocados convencional y organics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00837afa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4916df1d",
-   "metadata": {},
-   "source": [
-    "#### Observaciones:\n",
+    "##### Separar avocados convencional y organics\n",
+    "Observaciones:\n",
     "* TODO: Aqui es veu clarament que el alvocat més relevant es el convencional per ordres de magnitud, per ho que seria relevant fer algún estudi del subset eliminant els organics o estudian-los per separat.\n",
     "* Addicionalment, l'any 2018 no esta complert, pot afectar a les dades."
    ]
@@ -619,7 +604,7 @@
    "id": "de3c02d4",
    "metadata": {},
    "source": [
-    "##### TODO\n",
+    "##### TODO: Convencional vs Organic\n",
     "Observaciones:\n",
     "* TODO: \n",
     "  * Si mirem la proporcio, en general es manté constant. No hi ha ningun interes per a tornar a ho natural a les gran ciutats o extensions.\n",
@@ -633,15 +618,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Si mirem la proporcio, en general es manté constant. No hi ha ningun interes per a tornar a ho natural a les gran ciutats o extensions.\n",
-    "# Si acas hi ha més divergencia en extensions menors.\n",
+    "grouped = df_subset.groupby(['region', 'type'])['Total Volume'].sum()\n",
     "unstacked_type= grouped.unstack()\n",
     "unstacked_type['Proportion'] = unstacked_type['conventional']/unstacked_type['organic']\n",
     "\n",
     "fig, ax= plt.subplots(figsize=(12,4))\n",
     "x_values= unstacked_type['conventional']\n",
     "y_values= unstacked_type['Proportion']\n",
-    "\n",
     "ax.scatter(x=x_values, y= y_values )\n",
     "# plt.ylim(0, 0.3*10**9)\n",
     "plt.grid()"
@@ -714,6 +697,7 @@
     "df_year_price = df_cp.groupby('year')['AveragePrice'].mean()\n",
     "df_year_price_conventional = df_cp[df_cp['type'] =='conventional'].groupby('year')['AveragePrice'].mean()\n",
     "df_year_price_organic = df_cp[df_cp['type'] =='organic'].groupby('year')['AveragePrice'].mean()\n",
+    "display(df_year_price)\n",
     "\n",
     "# Graficar\n",
     "plt.figure(figsize=(10, 2)) \n",
@@ -724,7 +708,7 @@
     "plt.legend(loc='lower right'); plt.grid(True)\n",
     "plt.xticks(rotation=0)\n",
     "plt.show()\n",
-    "display(df_year_price)\n",
+    "\n",
     "\n",
     "plt.figure(figsize=(10, 2)) \n",
     "df_year_price_organic.plot.bar(label ='Precio medio alvocado organic', color ='green') # x='aaa??',y='bbb??',\n",
