Texts en castella.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -108,7 +108,7 @@
    "id": "4dd31ff9",
    "metadata": {},
    "source": [
-    "##### Mostrar las regions top 10 por Total Volume"
+    "##### Mostrar las Regions top 10 por Total Volume"
    ]
   },
   {
@@ -984,7 +984,7 @@
    "id": "edaa99db-948c-4549-8772-acb13b6a62a1",
    "metadata": {},
    "source": [
-    "#### Correlacion de les \"grans regions\" i regions amb volum total US\n",
+    "#### Correlacion volumen total entre de las \"grandes regiones\" y \"regiones\" con total US\n",
     "* TODO: IMPORTANT VOLUM VENTAS GREATERREGIONS == TOTALUS"
    ]
   },
@@ -1027,7 +1027,7 @@
    "id": "68bd45dd-adad-43ec-b9b9-9589c8524398",
    "metadata": {},
    "source": [
-    "#### Correlacion de volum total de les ciutats amb volum total US"
+    "#### Correlacion de Volumen Total de las ciudades con Volumen de Total US (alvocado conventional)"
    ]
   },
   {
@@ -1120,7 +1120,7 @@
     "\n",
     "# display(df_temp)\n",
     "#%%\n",
-    "fig, ax1 = plt.subplots(figsize=(16,8))\n",
+    "fig, ax1 = plt.subplots(figsize=(12,4))\n",
     "#plt.title('Estudio economico')\n",
     "color = 'tab:red'\n",
     "ax1.set_xlabel('Data')\n",
