Mes apartats TODO reorganitzats.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -300,7 +300,90 @@
    "id": "49a9ae69",
    "metadata": {},
    "source": [
-    "##### Precios promedio calibre "
+    "##### Precios promedio calibre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "229777c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c589ccc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_avocado_size = df_cp.copy()\n",
+    "df_avocado_size['Volume_Hass_S ratio'] = df_avocado_size['Volume_Hass_S'] / df_avocado_size['Total Volume']\n",
+    "df_avocado_size['Volume_Hass_L ratio'] = df_avocado_size['Volume_Hass_L'] / df_avocado_size['Total Volume']\n",
+    "df_avocado_size['Volume_Hass_XL ratio'] = df_avocado_size['Volume_Hass_XL'] / df_avocado_size['Total Volume']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "962d801a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_df= df_avocado_size[['AveragePrice', 'Volume_Hass_S ratio', 'Volume_Hass_L ratio', 'Volume_Hass_XL ratio']]\n",
+    "# Calcular la matriz de correlación\n",
+    "corr_matrix = corr_df.corr()\n",
+    "\n",
+    "# Visualizar la matriz de correlación\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
+    "plt.title('Matriz de correlación AveragePrice - Calibres')\n",
+    "plt.show()\n",
+    "\n",
+    "# Identificar columnas con correlación alta (umbral = 0.8)\n",
+    "threshold = 0.8\n",
+    "to_drop = []\n",
+    "for column in corr_matrix.columns:\n",
+    "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
+    "        to_drop.append(column)\n",
+    "        \n",
+    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac51625f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_df= df_cp_cleaned[['Total Volume', 'Volume_Hass_S', 'Volume_Hass_L', 'Volume_Hass_XL']]\n",
+    "# Calcular la matriz de correlación\n",
+    "corr_matrix = corr_df.corr()\n",
+    "\n",
+    "# Visualizar la matriz de correlación\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
+    "plt.title('Matriz de correlación Total Volume - Calibres')\n",
+    "plt.show()\n",
+    "\n",
+    "# Identificar columnas con correlación alta (umbral = 0.8)\n",
+    "threshold = 0.8\n",
+    "to_drop = []\n",
+    "for column in corr_matrix.columns:\n",
+    "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
+    "        to_drop.append(column)\n",
+    "        \n",
+    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7937aff8",
+   "metadata": {},
+   "source": [
+    "##### Proporcion de calibres sobre Total Volume"
    ]
   },
   {
@@ -309,7 +392,11 @@
    "id": "38b19ca6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax= plt.subplots(figsize=(20,8))\n",
+    "ratio_bag=df_avocado_size.groupby('region')[['Volume_Hass_S ratio', 'Volume_Hass_L ratio', 'Volume_Hass_XL ratio']].mean()\n",
+    "ratio_bag.plot(kind='bar', color=['green', 'orange', 'red'],ax=ax )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1074,6 +1161,80 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d77567d5",
+   "metadata": {},
+   "source": [
+    "##### Fechas con explosión de ventas\n",
+    "* TODO: Super Bowl\n",
+    "  * 2015: 2 de febrero\n",
+    "  * 2016: 7 de febrero\n",
+    "  * 2017: 6 de febrero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2e5f0d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prova_= df_cp.copy()\n",
+    "index_df= df_cp.copy()\n",
+    "prova_= prova_[prova_['type']=='conventional']\n",
+    "\n",
+    "index_df= index_df[index_df['region_class']=='GreaterRegion']\n",
+    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(5).index)\n",
+    "# region_largest.append('TotalUS')\n",
+    "\n",
+    "fig, ax= plt.subplots(figsize=(20,4))\n",
+    "for region in region_largest:\n",
+    "    prova_temp = prova_[prova_['region']==region]\n",
+    "    prova_temp=prova_temp.sort_values(by='Date')\n",
+    "    prova_temp.plot(x= 'Date', y= 'Total Volume', ax=ax, label= region)\n",
+    "plt.legend(loc='best'); plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94179099",
+   "metadata": {},
+   "source": [
+    "##### TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad7204fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_cp_cleaned = av.df(\"df_cleaned\")\n",
+    "prova_= df_cp.copy()\n",
+    "index_df= df_cp.copy()\n",
+    "prova_= prova_[prova_['type']=='conventional']\n",
+    "\n",
+    "#great_dates= df_cp_cleaned.copy()\n",
+    "#great_dates= great_dates[great_dates['type']=='conventional']\n",
+    "\n",
+    "index_df= df_cp.copy()\n",
+    "index_df= index_df[index_df['region_class']=='GreaterRegion']\n",
+    "\n",
+    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(5).index)\n",
+    "#region_largest#.append('TotalUS')\n",
+    "fig, ax= plt.subplots(figsize=(20,6))\n",
+    "for region in region_largest:\n",
+    "    prova_temp = prova_[prova_['region']==region]\n",
+    "    prova_temp=prova_temp.sort_values(by='Date')\n",
+    "    prova_temp.plot(x= 'Date', y= 'AveragePrice', ax=ax, label= region)\n",
+    "\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b6d751ef-4246-4b9b-a3d7-cd5875cd7cea",
    "metadata": {},
    "source": [
@@ -1515,139 +1676,6 @@
    "metadata": {},
    "source": [
     " ### TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9e828a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_cp_cleaned = av.df(\"df_cleaned\")\n",
-    "prova_= df_cp.copy()\n",
-    "index_df= df_cp.copy()\n",
-    "prova_= prova_[prova_['type']=='conventional']\n",
-    "\n",
-    "#great_dates= df_cp_cleaned.copy()\n",
-    "#great_dates= great_dates[great_dates['type']=='conventional']\n",
-    "\n",
-    "index_df= df_cp.copy()\n",
-    "index_df= index_df[index_df['region_class']=='GreaterRegion']\n",
-    "\n",
-    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(5).index)\n",
-    "#region_largest#.append('TotalUS')\n",
-    "fig, ax= plt.subplots(figsize=(20,6))\n",
-    "for region in region_largest:\n",
-    "    prova_temp = prova_[prova_['region']==region]\n",
-    "    prova_temp=prova_temp.sort_values(by='Date')\n",
-    "    prova_temp.plot(x= 'Date', y= 'AveragePrice', ax=ax, label= region)\n",
-    "\n",
-    "plt.grid()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29f68152",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prova_= df_cp.copy()\n",
-    "index_df= df_cp.copy()\n",
-    "prova_= prova_[prova_['type']=='conventional']\n",
-    "\n",
-    "index_df= index_df[index_df['region_class']=='GreaterRegion']\n",
-    "region_largest= list(index_df.groupby('region')['Total Volume'].sum().nlargest(5).index)\n",
-    "# region_largest.append('TotalUS')\n",
-    "\n",
-    "fig, ax= plt.subplots(figsize=(20,4))\n",
-    "for region in region_largest:\n",
-    "    prova_temp = prova_[prova_['region']==region]\n",
-    "    prova_temp=prova_temp.sort_values(by='Date')\n",
-    "    prova_temp.plot(x= 'Date', y= 'Total Volume', ax=ax, label= region)\n",
-    "plt.legend(loc='best'); plt.grid(True)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f4b137d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_avocado_size = df_cp.copy()\n",
-    "df_avocado_size['Volume_Hass_S ratio'] = df_avocado_size['Volume_Hass_S'] / df_avocado_size['Total Volume']\n",
-    "df_avocado_size['Volume_Hass_L ratio'] = df_avocado_size['Volume_Hass_L'] / df_avocado_size['Total Volume']\n",
-    "df_avocado_size['Volume_Hass_XL ratio'] = df_avocado_size['Volume_Hass_XL'] / df_avocado_size['Total Volume']\n",
-    "\n",
-    "fig, ax= plt.subplots(figsize=(20,8))\n",
-    "ratio_bag=df_avocado_size.groupby('region')[['Volume_Hass_S ratio', 'Volume_Hass_L ratio', 'Volume_Hass_XL ratio']].mean()\n",
-    "ratio_bag.plot(kind='bar', color=['green', 'orange', 'red'],ax=ax )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90dee5f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_df= df_avocado_size[['AveragePrice', 'Volume_Hass_S ratio', 'Volume_Hass_L ratio', 'Volume_Hass_XL ratio']]\n",
-    "# Calcular la matriz de correlación\n",
-    "corr_matrix = corr_df.corr()\n",
-    "\n",
-    "# Visualizar la matriz de correlación\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
-    "plt.title('Matriz de Correlación')\n",
-    "plt.show()\n",
-    "\n",
-    "# Identificar columnas con correlación alta (umbral = 0.8)\n",
-    "threshold = 0.8\n",
-    "to_drop = []\n",
-    "for column in corr_matrix.columns:\n",
-    "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
-    "        to_drop.append(column)\n",
-    "        \n",
-    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "056b1590",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_df= df_cp_cleaned[['Total Volume', 'Volume_Hass_S', 'Volume_Hass_L', 'Volume_Hass_XL']]\n",
-    "# Calcular la matriz de correlación\n",
-    "corr_matrix = corr_df.corr()\n",
-    "\n",
-    "# Visualizar la matriz de correlación\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')\n",
-    "plt.title('Matriz de Correlación')\n",
-    "plt.show()\n",
-    "\n",
-    "# Identificar columnas con correlación alta (umbral = 0.8)\n",
-    "threshold = 0.8\n",
-    "to_drop = []\n",
-    "for column in corr_matrix.columns:\n",
-    "    if any((corr_matrix[column].abs() > threshold) & (corr_matrix.index != column)):\n",
-    "        to_drop.append(column)\n",
-    "        \n",
-    "print(f\"Variables altamente correlacionadas con otras: {to_drop}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f3630a54",
-   "metadata": {},
-   "source": [
-    "#### TODO"
    ]
   },
   {
