Nomes resten a TODO tres apartats per reorganitzar.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -64,7 +64,15 @@
     "df_cp_cleaned = df_cp\n",
     "df_cp_cleaned['Suma Volums'] = df_cp_cleaned['Volume_Hass_S' ]+ df_cp_cleaned['Volume_Hass_L']+ df_cp_cleaned['Volume_Hass_XL' ]\n",
     "df_cp_cleaned['Variacio'] = (df_cp_cleaned['Total Volume'] - df_cp_cleaned['Suma Volums'])*100/df_cp_cleaned['Total Volume']\n",
-    "av.add(df_cp_cleaned,'df_cleaned')"
+    "av.add(df_cp_cleaned,'df_cleaned')\n",
+    "\n",
+    "region_largest= df_cp.groupby('region')['Total Volume'].sum().nlargest(10).index\n",
+    "av.add(region_largest,'df_region_largest')\n",
+    "smallest_regions= df_cp_cleaned[df_cp_cleaned['region'].isin(region_largest)]\n",
+    "av.add(smallest_regions,'df_smallest_regions')\n",
+    "\n",
+    "#small_group = df_cp_cleaned.groupby('region')['Variacio'].mean().sort_values()\n",
+    "#small_group"
    ]
   },
   {
@@ -81,7 +89,11 @@
     "print(f\"\\nNombres de Columnas: {column_names}\")\n",
     " \n",
     "data_types = df_cp.dtypes\n",
-    "print(f\"\\nTipos de datos de cada columna:\\n{data_types}\")"
+    "print(f\"\\nTipos de datos de cada columna:\\n{data_types}\")\n",
+    "\n",
+    "#df_cp.head()\n",
+    "#df_cp.info()\n",
+    "#df_cp.describe()"
    ]
   },
   {
@@ -409,10 +421,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf19125",
+   "id": "40936885",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "296ab7e6",
+   "metadata": {},
+   "source": [
+    "#### Total Bags = Small Bags + Large Bags + XLarge Bags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdf19125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bags_df = df_cp_cleaned.copy()\n",
+    "bags_df['Suma Bags'] = bags_df['Small Bags']+ bags_df['Large Bags']+ bags_df['XLarge Bags']\n",
+    "bags_df['Variacio Bags'] = (bags_df['Total Bags'] - bags_df['Suma Bags'])*100/bags_df['Total Bags']\n",
+    "fig, ax= plt.subplots(figsize=(6,3))\n",
+    "bags_df['Variacio Bags'].hist(bins=100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1676,56 +1710,6 @@
    "metadata": {},
    "source": [
     " ### TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c508338",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_cp_cleaned['Suma Volums'] = df_cp_cleaned['Volume_Hass_S' ]+ df_cp_cleaned['Volume_Hass_L']+ df_cp_cleaned['Volume_Hass_XL' ]\n",
-    "df_cp_cleaned['Variacio'] = (df_cp_cleaned['Total Volume'] - df_cp_cleaned['Suma Volums'])*100/df_cp_cleaned['Total Volume']\n",
-    "smallest_regions= df_cp_cleaned[df_cp_cleaned['region'].isin(region_largest) ]\n",
-    "small_group = df_cp_cleaned.groupby('region')['Variacio'].mean().sort_values()\n",
-    "small_group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8a0fe41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grouper = df_cp_cleaned.groupby('region')['Total Volume'].sum().nlargest(10).index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "011ca8a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bags_df = df_cp_cleaned.copy()\n",
-    "bags_df['Suma Bags'] = bags_df['Small Bags']+ bags_df['Large Bags']+ bags_df['XLarge Bags']\n",
-    "bags_df['Variacio Bags'] = (bags_df['Total Bags'] - bags_df['Suma Bags'])*100/bags_df['Total Bags']\n",
-    "fig, ax= plt.subplots(figsize=(6,3))\n",
-    "bags_df['Variacio Bags'].hist(bins=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab298329",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cp.head()\n",
-    "df_cp.info()\n",
-    "df_cp.describe()"
    ]
   },
   {
