Mostrar TotalUS en ventas totales sobre precio promedio

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -861,8 +861,9 @@
    "source": [
     "classification_colors = {'City':'green' ,'Region':'red' ,'GreaterRegion':'orange', 'TotalUS': 'blue'}\n",
     "\n",
+    "df_subset = df_cp.copy()\n",
     "#df_subset = av.df(\"df_city_region\") \n",
-    "df_subset = df_cp[df_cp['region']!= 'TotalUS']\n",
+    "#df_subset = df_cp[df_cp['region']!= 'TotalUS']\n",
     "\n",
     "df_organic = df_subset[df_subset['type']=='organic']\n",
     "df_convencionals = df_subset[df_subset['type']=='conventional']\n",
@@ -1386,7 +1387,6 @@
    "outputs": [],
    "source": [
     "columnas_bags = ['Total Bags', 'Small Bags', 'Large Bags', 'XLarge Bags']\n",
-    "\n",
     "# df_bag_temp = df_cp_cleaned[df_cp_cleaned['region']=='Philadelphia'].copy()\n",
     "df_bag_temp = df_cp_cleaned.copy()\n",
     "df_bag_temp= df_cp_cleaned.groupby('Date')['Total Bags'].sum()\n",
@@ -1411,7 +1411,6 @@
    "outputs": [],
    "source": [
     "columnas_bags = ['Total Bags', 'Small Bags', 'Large Bags', 'XLarge Bags']\n",
-    "\n",
     "fig, ax= plt.subplots()\n",
     "for title_bag in columnas_bags:\n",
     "    df_bag_temp= df_cp_cleaned.groupby('Date')[title_bag].sum()\n",
