Correccio al canvi anterior.

--- a/10.Avocados_del_diablo.ipynb
+++ b/10.Avocados_del_diablo.ipynb
@@ -902,6 +902,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_subset = df_cp[df_cp['region']!= 'TotalUS']\n",
+    "df_organic = df_subset[df_subset['type']=='organic']\n",
+    "df_convencionals = df_subset[df_subset['type']=='conventional']\n",
+    "\n",
     "# df_convencionals\n",
     "index_df = df_cp_cleaned.copy()\n",
     "#['West', 'California', 'SouthCentral', 'Northeast', 'Southeast']\n",
